<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#eab676"
    >

    <!-- Título de la ventana -->
    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"
        android:gravity="center" />

    <!-- Campo para el nombre -->
    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:layout_marginBottom="8dp" />

    <!-- Campo para el correo electrónico -->
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="8dp" />

    <!-- Campo para la contraseña -->
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp" />
    <!-- Campo para confirmar contraseña -->
    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp" />

    <!-- Botón para registrarse -->
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button_text"
        android:background="#c96527"
        />
    <!-- Botón para login -->
    <Button
        android:id="@+id/tv_login_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#c96527"
        android:text="@string/volver_login" />

</LinearLayout>
