<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#eab676"
    >

    <TextView
        android:id="@+id/tv_bienvenida"
        android:layout_width="113dp"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:text="@string/bienvenida"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_correo"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/et_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_contraseña"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/btn_iniciar_sesion"
        android:layout_width="381dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_inicio" />

    <Button
        android:id="@+id/tv_registrar"
        android:layout_width="296dp"
        android:layout_height="87dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/registrarse" />
</LinearLayout>
