<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#eab676"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Nombre del hábito -->
        <EditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre_habito"
            android:inputType="text"/>

        <!-- Descripción (opcional) -->
        <EditText
            android:id="@+id/et_descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_descripcion"
            android:inputType="textMultiLine"/>

        <!-- Frecuencia semanal -->
        <EditText
            android:id="@+id/et_frecuencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_frecuencia"
            android:inputType="number"/>

        <!-- Hora de recordatorio -->
        <EditText
            android:id="@+id/et_hora_recordatorio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_hora_recordatorio"
            android:focusable="false" />

        <!-- Selector de ícono o color -->
        <TextView
            android:id="@+id/tv_icono_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seleccionar_icono_color"
            android:layout_marginTop="16dp"/>

        <!-- Categoría -->
        <Spinner
            android:id="@+id/spinner_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Botones -->
        <Button
            android:id="@+id/btn_guardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_guardar"
            android:background="#c96527"
            />

        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancelar"
            android:layout_marginTop="8dp"
            android:background="#c96527"
            />

    </LinearLayout>
</ScrollView>
