<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Título -->
    <TextView
        android:id="@+id/tv_main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginBottom="16dp" />
    <!-- Lista de Hábitos -->
    <ListView
        android:id="@+id/lv_habits"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <!-- Botón para Añadir Hábito -->
    <Button
        android:id="@+id/btn_add_habit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_habit_button" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progreso_semanal"
        android:textSize="20sp"
        android:layout_gravity="center"/>

    <!-- Gráfico -->
    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/bar_chart_monthly"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="16dp" />

    <!-- Gráfica -->
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pie_chart_weekly"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginBottom="16dp" />
    <!-- Filtro por Fecha -->
    <Button
        android:id="@+id/btn_filter_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_button" />
    <!-- Selector de fechas -->
    <Button
        android:id="@+id/btn_filtrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:text="@string/filtrar_por_fecha" />
</LinearLayout>
