<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Contenedor del Logo -->
    <FrameLayout
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center">

        <!-- Imagen circular -->
        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_logo"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_logo"
            app:shapeAppearanceOverlay="@style/CircularImageShape" />

    </FrameLayout>

    <!-- Descripción o eslogan -->
    <TextView
        android:id="@+id/descripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"/>

    <!-- Botones -->
    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_inicio"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_registrar"
        android:layout_marginTop="8dp"/>
</LinearLayout>
